feat: downgrade from Java 17 to Java 8